crates/syntax/tests/snapshots/parser__parser_pub-part.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..84,
        statements: StatementList {
            span: 0..84,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                (
                    Workbench(
                        WorkbenchDefinition {
                            span: 0..84,
                            keyword_span: 4..8,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            doc: None,
                            kind: Part,
                            attributes: [],
                            visibility: Some(
                                Public,
                            ),
                            name: Identifier {
                                span: 9..14,
                                name: "Wheel",
                            },
                            plan: ParameterList {
                                span: 15..43,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                parameters: [
                                    Parameter {
                                        span: 15..29,
                                        extras: ItemExtras {
                                            leading: [],
                                            trailing: [],
                                        },
                                        name: Identifier {
                                            span: 15..21,
                                            name: "radius",
                                        },
                                        ty: Some(
                                            Single(
                                                SingleType {
                                                    span: 23..29,
                                                    name: "Length",
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                    Parameter {
                                        span: 30..43,
                                        extras: ItemExtras {
                                            leading: [
                                                Whitespace(
                                                    " ",
                                                ),
                                            ],
                                            trailing: [],
                                        },
                                        name: Identifier {
                                            span: 31..37,
                                            name: "height",
                                        },
                                        ty: None,
                                        default: Some(
                                            Literal(
                                                Literal {
                                                    span: 40..43,
                                                    extras: ItemExtras {
                                                        leading: [],
                                                        trailing: [],
                                                    },
                                                    literal: Quantity(
                                                        QuantityLiteral {
                                                            span: 40..43,
                                                            value: 1.0,
                                                            raw: "1",
                                                            ty: SingleType {
                                                                span: 41..43,
                                                                name: "mm",
                                                            },
                                                        },
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ],
                            },
                            body: Body {
                                span: 45..84,
                                statements: StatementList {
                                    span: 46..83,
                                    extras: ItemExtras {
                                        leading: [],
                                        trailing: [],
                                    },
                                    statements: [
                                        (
                                            Expression(
                                                ExpressionStatement {
                                                    span: 46..82,
                                                    extras: ItemExtras {
                                                        leading: [],
                                                        trailing: [],
                                                    },
                                                    attributes: [],
                                                    expression: Call(
                                                        Call {
                                                            span: 46..82,
                                                            extras: ItemExtras {
                                                                leading: [],
                                                                trailing: [],
                                                            },
                                                            name: QualifiedName {
                                                                span: 46..66,
                                                                extras: ItemExtras {
                                                                    leading: [],
                                                                    trailing: [],
                                                                },
                                                                parts: [
                                                                    Identifier {
                                                                        span: 46..49,
                                                                        name: "std",
                                                                    },
                                                                    Identifier {
                                                                        span: 51..56,
                                                                        name: "geo3d",
                                                                    },
                                                                    Identifier {
                                                                        span: 58..66,
                                                                        name: "Cylinder",
                                                                    },
                                                                ],
                                                            },
                                                            arguments: ArgumentList {
                                                                span: 67..81,
                                                                extras: ItemExtras {
                                                                    leading: [],
                                                                    trailing: [],
                                                                },
                                                                arguments: [
                                                                    Unnamed(
                                                                        UnnamedArgument {
                                                                            span: 67..73,
                                                                            extras: ItemExtras {
                                                                                leading: [],
                                                                                trailing: [],
                                                                            },
                                                                            value: QualifiedName(
                                                                                QualifiedName {
                                                                                    span: 67..73,
                                                                                    extras: ItemExtras {
                                                                                        leading: [],
                                                                                        trailing: [],
                                                                                    },
                                                                                    parts: [
                                                                                        Identifier {
                                                                                            span: 67..73,
                                                                                            name: "radius",
                                                                                        },
                                                                                    ],
                                                                                },
                                                                            ),
                                                                        },
                                                                    ),
                                                                    Unnamed(
                                                                        UnnamedArgument {
                                                                            span: 75..81,
                                                                            extras: ItemExtras {
                                                                                leading: [],
                                                                                trailing: [],
                                                                            },
                                                                            value: QualifiedName(
                                                                                QualifiedName {
                                                                                    span: 75..81,
                                                                                    extras: ItemExtras {
                                                                                        leading: [],
                                                                                        trailing: [],
                                                                                    },
                                                                                    parts: [
                                                                                        Identifier {
                                                                                            span: 75..81,
                                                                                            name: "height",
                                                                                        },
                                                                                    ],
                                                                                },
                                                                            ),
                                                                        },
                                                                    ),
                                                                ],
                                                            },
                                                        },
                                                    ),
                                                },
                                            ),
                                            [],
                                        ),
                                    ],
                                    tail: None,
                                },
                            },
                        },
                    ),
                    [],
                ),
            ],
            tail: None,
        },
    },
)
