crates/syntax/tests/snapshots/parser__parser_qualified name.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(input).map(|doc| doc.ast)
---
Ok(
    Source {
        span: 0..8,
        statements: StatementList {
            span: 0..8,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                ExpressionStatement {
                    span: 0..8,
                    extras: ItemExtras {
                        leading: LeadingExtras(
                            [],
                        ),
                        trailing: TrailingExtras(
                            [],
                        ),
                    },
                    attributes: [],
                    expression: QualifiedName(
                        QualifiedName {
                            span: 0..8,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            parts: [
                                Identifier {
                                    span: 0..3,
                                    name: "foo",
                                },
                                Identifier {
                                    span: 5..8,
                                    name: "bar",
                                },
                            ],
                        },
                    ),
                },
            ),
        },
    },
)
