crates/syntax/tests/snapshots/parser__parser_quantity float.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(input)
---
Ok(
    Program {
        span: 0..4,
        statements: StatementList {
            span: 0..4,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                ExpressionStatement {
                    span: 0..4,
                    extras: ItemExtras {
                        leading: LeadingExtras(
                            [],
                        ),
                        trailing: TrailingExtras(
                            [],
                        ),
                    },
                    attributes: [],
                    expression: Literal(
                        Literal {
                            span: 0..4,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            literal: Quantity(
                                QuantityLiteral {
                                    span: 0..4,
                                    value: 0.2,
                                    raw: ".2",
                                    unit: Unit {
                                        span: 2..4,
                                        name: "mm",
                                    },
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    },
)
