crates/syntax/tests/snapshots/parser__parser_quantity int.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(input).map(|doc| doc.ast)
---
Ok(
    Source {
        span: 0..3,
        statements: StatementList {
            span: 0..3,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                ExpressionStatement {
                    span: 0..3,
                    extras: ItemExtras {
                        leading: LeadingExtras(
                            [],
                        ),
                        trailing: TrailingExtras(
                            [],
                        ),
                    },
                    attributes: [],
                    expression: Literal(
                        Literal {
                            span: 0..3,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            literal: Quantity(
                                QuantityLiteral {
                                    span: 0..3,
                                    value: 1.0,
                                    raw: "1",
                                    unit: Unit {
                                        span: 1..3,
                                        name: "mm",
                                    },
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    },
)
