crates/syntax/tests/snapshots/parser__parser_single float.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..3,
        statements: StatementList {
            span: 0..3,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..3,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attributes: [],
                        expression: Literal(
                            Literal {
                                span: 0..3,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                literal: Float(
                                    FloatLiteral {
                                        span: 0..3,
                                        value: 1.2,
                                        raw: "1.2",
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
