crates/syntax/tests/snapshots/parser__parser_single int.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..1,
        statements: StatementList {
            span: 0..1,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..1,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        attributes: [],
                        expression: Literal(
                            Literal {
                                span: 0..1,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                literal: Integer(
                                    IntegerLiteral {
                                        span: 0..1,
                                        value: 1,
                                        raw: "1",
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
