crates/syntax/tests/snapshots/parser__parser_sketch-with-init.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..130,
        statements: StatementList {
            span: 0..130,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                Workbench(
                    WorkbenchDefinition {
                        span: 0..130,
                        keyword_span: 0..6,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        doc: None,
                        kind: Sketch,
                        attributes: [],
                        visibility: None,
                        name: Identifier {
                            span: 7..12,
                            name: "Wheel",
                        },
                        plan: ParameterList {
                            span: 13..27,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            parameters: [
                                Parameter {
                                    span: 13..27,
                                    extras: ItemExtras {
                                        leading: [],
                                        trailing: [],
                                    },
                                    name: Identifier {
                                        span: 13..19,
                                        name: "radius",
                                    },
                                    ty: Some(
                                        Single(
                                            SingleType {
                                                span: 21..27,
                                                name: "Length",
                                            },
                                        ),
                                    ),
                                    default: None,
                                },
                            ],
                        },
                        body: StatementList {
                            span: 35..129,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            statements: [
                                Init(
                                    InitDefinition {
                                        span: 35..96,
                                        keyword_span: 35..39,
                                        extras: ItemExtras {
                                            leading: [],
                                            trailing: [],
                                        },
                                        doc: None,
                                        attributes: [],
                                        parameters: ParameterList {
                                            span: 40..56,
                                            extras: ItemExtras {
                                                leading: [],
                                                trailing: [],
                                            },
                                            parameters: [
                                                Parameter {
                                                    span: 40..56,
                                                    extras: ItemExtras {
                                                        leading: [],
                                                        trailing: [],
                                                    },
                                                    name: Identifier {
                                                        span: 40..48,
                                                        name: "diameter",
                                                    },
                                                    ty: Some(
                                                        Single(
                                                            SingleType {
                                                                span: 50..56,
                                                                name: "Length",
                                                            },
                                                        ),
                                                    ),
                                                    default: None,
                                                },
                                            ],
                                        },
                                        body: StatementList {
                                            span: 68..95,
                                            extras: ItemExtras {
                                                leading: [],
                                                trailing: [],
                                            },
                                            statements: [
                                                LocalAssignment(
                                                    LocalAssignment {
                                                        span: 68..89,
                                                        extras: ItemExtras {
                                                            leading: [],
                                                            trailing: [],
                                                        },
                                                        attributes: [],
                                                        name: Identifier {
                                                            span: 68..74,
                                                            name: "radius",
                                                        },
                                                        ty: None,
                                                        value: BinaryOperation(
                                                            BinaryOperation {
                                                                span: 77..89,
                                                                lhs: QualifiedName(
                                                                    QualifiedName {
                                                                        span: 77..85,
                                                                        extras: ItemExtras {
                                                                            leading: [],
                                                                            trailing: [],
                                                                        },
                                                                        parts: [
                                                                            Identifier {
                                                                                span: 77..85,
                                                                                name: "diameter",
                                                                            },
                                                                        ],
                                                                    },
                                                                ),
                                                                operation: Operator {
                                                                    span: 86..87,
                                                                    operation: Divide,
                                                                },
                                                                rhs: Literal(
                                                                    Literal {
                                                                        span: 88..89,
                                                                        extras: ItemExtras {
                                                                            leading: [],
                                                                            trailing: [],
                                                                        },
                                                                        literal: Integer(
                                                                            IntegerLiteral {
                                                                                span: 88..89,
                                                                                value: 2,
                                                                                raw: "2",
                                                                            },
                                                                        ),
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                            tail: None,
                                        },
                                    },
                                ),
                                Expression(
                                    ExpressionStatement {
                                        span: 101..127,
                                        extras: ItemExtras {
                                            leading: [],
                                            trailing: [],
                                        },
                                        attributes: [],
                                        expression: Call(
                                            Call {
                                                span: 101..127,
                                                extras: ItemExtras {
                                                    leading: [],
                                                    trailing: [],
                                                },
                                                name: QualifiedName {
                                                    span: 101..119,
                                                    extras: ItemExtras {
                                                        leading: [],
                                                        trailing: [],
                                                    },
                                                    parts: [
                                                        Identifier {
                                                            span: 101..104,
                                                            name: "std",
                                                        },
                                                        Identifier {
                                                            span: 106..111,
                                                            name: "geo2d",
                                                        },
                                                        Identifier {
                                                            span: 113..119,
                                                            name: "Circle",
                                                        },
                                                    ],
                                                },
                                                arguments: ArgumentList {
                                                    span: 120..126,
                                                    extras: ItemExtras {
                                                        leading: [],
                                                        trailing: [],
                                                    },
                                                    arguments: [
                                                        Unnamed(
                                                            UnnamedArgument {
                                                                span: 120..126,
                                                                extras: ItemExtras {
                                                                    leading: [],
                                                                    trailing: [],
                                                                },
                                                                value: QualifiedName(
                                                                    QualifiedName {
                                                                        span: 120..126,
                                                                        extras: ItemExtras {
                                                                            leading: [],
                                                                            trailing: [],
                                                                        },
                                                                        parts: [
                                                                            Identifier {
                                                                                span: 120..126,
                                                                                name: "radius",
                                                                            },
                                                                        ],
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    ],
                                                },
                                            },
                                        ),
                                    },
                                ),
                            ],
                            tail: None,
                        },
                    },
                ),
            ],
            tail: None,
        },
    },
)
